fixed register and login overlapping

--- a/client/src/Pages/FAQ/faq.css
+++ b/client/src/Pages/FAQ/faq.css
@@ -4,9 +4,9 @@
     padding:  15px;
 }
 
-.container {
+/* .container {
     margin-top: -150px;
-}
+} */
 
 
 h1, h3 {
